[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
nix = "0.25.0"
rand = "0.8.5"
scan_fmt = "0.2.6"
capctl = "0.2.0"
syscallz = "0.16.1"
libc = "0.2.132"
